[package]
name = "makair-telemetry"
version = "2.0.0"
authors = ["David Sferruzza <david.sferruzza@gmail.com>", "Valerian Saliou <valerian@valeriansaliou.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
crc32fast = "1.2.0"
log = "0.4.13"
nom = "6.0.1"
thiserror = "1.0.23"
clap = { version = "3.0.0-beta.2", optional = true }
env_logger = { version = "0.8.2", optional = true }
rand = { version = "0.8.2", optional = true }
serde = { version = "1.0.119", features = ["derive"], optional = true }
serde_json = { version = "1.0.61", optional = true }
serial = { version = "0.4.0", optional = true }

[dev-dependencies]
proptest = "0.10.1"

[lib]
name = "telemetry"
path = "src/lib.rs"

[features]
default = ["rand", "serial"]
build-binary = ["clap", "env_logger", "rand", "serde_json", "serial", "serde-messages"]
serde-messages = ["serde"]

[[bin]]
name = "makair_telemetry"
path = "src/cli/bin.rs"
required-features = ["build-binary"]
