[package]
name = "makair-telemetry"
version = "2.0.0"
authors = ["David Sferruzza <david.sferruzza@gmail.com>", "Valerian Saliou <valerian@valeriansaliou.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
crc32fast = "1.2.0"
log = "0.4.13"
nom = "6.0.1"
thiserror = "1.0.23"
clap = { version = "3.0.0-beta.2", optional = true }
env_logger = { version = "0.8.2", optional = true }
rand = { version = "0.8.2", optional = true }
serde = { version = "1.0.119", features = ["derive"], optional = true }
serde_json = { version = "1.0.61", optional = true }
serial = { version = "0.4.0", optional = true }
tungstenite = { git = "https://github.com/dnaka91/tungstenite-rs", rev = "5a3dd8acfd4eff420c662d30c0ce486e953f3d45", features = ["use-rustls"], optional = true } # https://github.com/snapview/tungstenite-rs/pull/166
url = { version = "2.2.0", optional = true }

[dev-dependencies]
proptest = "0.10.1"

[lib]
name = "makair_telemetry"
path = "src/lib.rs"

[features]
default = ["rand", "serial", "websocket"]
build-binary = ["clap", "env_logger", "rand", "serde_json", "serial", "serde-messages", "websocket"]
serde-messages = ["serde"]
websocket = ["tungstenite", "url"]

[[bin]]
name = "makair_telemetry_cli"
path = "src/cli/bin.rs"
required-features = ["build-binary"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
