[package]
name = "makair-telemetry"
version = "2.2.0"
authors = ["David Sferruzza <david.sferruzza@gmail.com>", "Valerian Saliou <valerian@valeriansaliou.name>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
crc32fast = "1.3.0"
log = "0.4.14"
nom = "7.1.0"
thiserror = "1.0.30"
clap = { version = "3.0.0-beta.5", optional = true }
env_logger = { version = "0.9.0", optional = true }
rand = { version = "0.8.4", optional = true }
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = { version = "1.0.72", optional = true }
serial = { version = "0.4.0", optional = true }
tungstenite = { version = "0.16.0", default-features = false, features = ["rustls-tls-webpki-roots"], optional = true }
url = { version = "2.2.2", optional = true }

[dev-dependencies]
ntest = "0.7.3"
proptest = "1.0.0"

[lib]
name = "makair_telemetry"
path = "src/lib.rs"

[features]
default = ["rand", "serial"]
build-binary = ["clap", "env_logger", "rand", "serde_json", "serial", "serde-messages", "websocket"]
serde-messages = ["serde"]
websocket = ["tungstenite", "url"]

[[bin]]
name = "makair_telemetry_cli"
path = "src/cli/bin.rs"
required-features = ["build-binary"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
